<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tool:context=".LoginActivity">


    <include
        android:id="@+id/barLayout"
        layout="@layout/bar_layout" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:progressDrawable="@drawable/progress_drawable"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/barLayout" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barLayout"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/hint_email"
                    app:hintTextColor="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/PrimaryTextBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/hint_password"
                    app:hintTextColor="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/PrimaryTextBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        style="@style/SecondaryAppCompatTextViewSmall"
                        android:autoLink="all"
                        android:textSize="12sp"
                        android:linksClickable="true"
                        android:text="@string/sign_up"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
                -->


                <RelativeLayout
                    android:id="@+id/rlHelper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:layout_toStartOf="@id/tvForgetPassword"
                        android:fontFamily="@font/lato_regular"
                        android:textColor="@color/colorRed"
                        android:textSize="12sp"
                        android:visibility="invisible"
                        tool:text="Incorrect password and incorect username please try again later" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvForgetPassword"
                        style="@style/SecondaryAppCompatTextViewSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/forget_password"
                        android:textSize="12sp" />

                </RelativeLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:enabled="false"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite"
                    app:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rlHelper" />

                <!--    <View-->
                <!--        android:layout_width="match_parent"-->
                <!--        android:layout_height="1dp"-->
                <!--        android:background="@color/colorDivider"-->
                <!--        android:layout_marginEnd="24dp"-->
                <!--        android:layout_marginStart="24dp"-->
                <!--        android:layout_marginTop="16dp"-->
                <!--        app:layout_constraintTop_toBottomOf="@id/btnLogin"/>-->

                <LinearLayout
                    android:id="@+id/llDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorDivider" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvOr"
                        style="@style/SecondaryAppCompatTextViewSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/or" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorDivider" />


                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    app:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llDivider" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>